[package]
name = "lock"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable derive macros for clap to get #[derive(Parser)] and #[command(...)]
clap = { version = "4.1", features = ["derive"] }           # :contentReference[oaicite:3]{index=3}
rpassword = "7.0"
# Pull in std support so Argon2 errors implement std::error::Error
argon2 = { version = "0.4", features = ["std"] }            # :contentReference[oaicite:4]{index=4}
# Use the rand crate (not rand_core) for OsRng and RngCore
rand = "0.8"                                                # :contentReference[oaicite:5]{index=5}
# Default features include XChaCha20-Poly1305 support
chacha20poly1305 = "0.10"                                   # :contentReference[oaicite:6]{index=6}
